Fix an issue with images distorting size

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
     box-sizing: border-box;
 }
 
+img{
+    width: auto;
+    height: auto;
+}
+
 /* HEADER SECTION */
 .header{
     padding: 8px;
@@ -208,7 +213,7 @@ ul{
     grid-column: 2/3;
     grid-row: 2/6;
     display: grid;
-    grid-template-columns: repeat(auto-fit,  minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fit,  minmax(425px, 1fr));
     gap: 15px;
 }
 
